// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abstract.ts [babel-ts] format 1`] = `
"Method 'foo' cannot have an implementation because it is marked abstract. (2:5)
  1 | class A {
> 2 |     abstract foo() {}
    |     ^
  3 | }"
`;

exports[`classAbstractMethodWithImplementation.ts [babel-ts] format 1`] = `
"Method 'foo' cannot have an implementation because it is marked abstract. (2:5)
  1 | abstract class A {
> 2 |     abstract foo() {}
    |     ^
  3 | }"
`;

exports[`declare-accessor.ts [babel-ts] format 1`] = `
"'declare' is not allowed in getters. (2:3)
  1 | class Foo {
> 2 |   declare get foo()
    |   ^
  3 |   declare set foo(v)
  4 | }
  5 |"
`;

exports[`snippet: #0 [babel-ts] format 1`] = `
"Invalid left-hand side in assignment expression. (1:1)
> 1 | foo as any = 10;
    | ^"
`;

exports[`snippet: #1 [babel-ts] format 1`] = `
"Invalid left-hand side in assignment expression. (1:7)
> 1 | ({ a: b as any = 2000 } = x);
    |       ^"
`;

exports[`snippet: #2 [babel-ts] format 1`] = `
"Unterminated JSX contents. (1:9)
> 1 | <string>foo = '100';
    |         ^"
`;
